Fix for bug #7: Add license information to about page

--- a/air/about.html
+++ b/air/about.html
@@ -38,9 +38,11 @@
 		</div>
 		
 		<div class='footer'>
-			Copyright 2009<br />
-			Created by Niels Leenheer<br />
-			http://rakaz.nl<br />			
+			Copyright 2008 - 2009<br />
+			by Niels Leenheer<br />
+			http://mediatankcontroller.com<br />			
+			<br />
+			This software is distributed under a three-clause BSD license.<br />
 			<br />
 			Check the forum at www.networkedmediatank.com for support
 		</div>
