Fix for bug #6: Add license information to about page

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 
-<!--
-<html manifest="manifest.php">
--->
-
 <html manifest="manifest.php">
 <head>
 	<title>Mediatank</title>
@@ -93,6 +89,10 @@
                     <b>iScroll 2.3</b> copyright 2009 by Matteo Spinelli and
                     <b>Prototype Lite</b> copyright 2005 by Sam Stephenson.
                 </p>
+				
+				<p>
+					This software is distributed under a three-clause BSD license.
+				</p>
             
                 <p>
                     Networked Media Tank is a registered trademark of Syabas Technologies.
