Update URLs for move to mediatankcontroller.com domain and version numbers for 1.0 release

--- a/air/index.html
+++ b/air/index.html
@@ -11,7 +11,7 @@
 		
 			var appUpdater = new runtime.air.update.ApplicationUpdaterUI();
 			
-			appUpdater.updateURL = "http://rakaz.nl/projects/nmt/MediatankController.xml";
+			appUpdater.updateURL = "http://mediatankcontroller.com/repository/air/update.xml";
 			appUpdater.delay = 0.15;
 			appUpdater.isCheckForUpdateVisible = false;
 			appUpdater.isDownloadUpdateVisible = true;
