Updated version numbers to 1.0

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -76,7 +76,7 @@
                 </p>
             
                 <p>
-                    Version 1.0 beta 1
+                    Version 1.0
                 </p>
                 
                 <p>
