Updated footer for 5 positions and let the items be dynamically generated

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -180,11 +180,6 @@
         </div>
     </div>
 
-	<ul id='footer' class='footer'>
-		<li><a id='footerContents' target='ignore' rel='contents'>Contents</a></li>
-		<li><a id='footerFavorite' target='ignore' rel='favorites'>Favorites</a></li>
-		<li><a id='footerWatchlist' target='ignore' rel='watchfolder'><div id='watchfolderStatus' style='display: none;'></div>Watch Folder</a></li>
-		<li><a id='footerRemote' target='ignore' rel='remote'>Remote</a></li>
-	</ul>
+	<ul id='footer' class='footer'></ul>
 </body>
 </html>
