--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -181,5 +181,19 @@
     </div>
 
 	<ul id='footer' class='footer'></ul>
+
+	<script type='text/javascript'>
+	<!-- 
+
+		application = new MediatankController(!! navigator.standalone);
+	
+		addEventListener("resume", function() {
+			if (application.connection && application) {
+				application.connection.resume();
+			}
+		});
+
+	//-->
+	</script>
 </body>
 </html>
