Move to the full version of prototype... which I will later slim down to a more appropriate size

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -10,8 +10,8 @@
 	<link rel="apple-touch-icon-precomposed" href="index.png" />
 	<link rel="stylesheet" type="text/css" href="c/main.css" />
 
+	<script type="text/javascript" src="j/prototype.js"></script>
 	<script type="text/javascript" src="j/json.js"></script>
-	<script type="text/javascript" src="j/prototype.lite.js"></script>
 	<script type="text/javascript" src="j/iui.js"></script>
 	<script type="text/javascript" src="j/iscroll.js"></script>
   	<script type="text/javascript" src="j/helpers.js"></script>
