Add editing to the Favorites page... Use drag and drop to move the items around

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="c/main.css" />
 
 	<script type="text/javascript" src="j/prototype.js"></script>
+	<script type="text/javascript" src="j/dragdrop.touch.js"></script>
 	<script type="text/javascript" src="j/iui.js"></script>
 	<script type="text/javascript" src="j/iscroll.js"></script>
   	<script type="text/javascript" src="j/helpers.js"></script>
