--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -8,6 +8,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
 	<link rel="apple-touch-icon-precomposed" href="index.png" />
+    <link rel="apple-touch-startup-image" href="splash.png" />
 	<link rel="stylesheet" type="text/css" href="c/main.css" />
 
 	<script type="text/javascript" src="j/prototype.js"></script>
