Pass the theme to the application

--- a/iphone/webui/themes/iphone/index.html
+++ b/iphone/webui/themes/iphone/index.html
@@ -194,7 +194,7 @@
 	<script type='text/javascript'>
 	<!-- 
 
-		application = new MediatankController(!! navigator.standalone);
+		application = new MediatankController(!! navigator.standalone, 'iphone');
 	
 		addEventListener("resume", function() {
 			if (application.connection && application) {
